--- a/style.css
+++ b/style.css
@@ -119,10 +119,24 @@ select {
 
 .stat {
     font-weight: 700;
-    font-size: 1.1rem;
+    font-size: 1rem;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
+}
+
+.reference-box {
+    background: white;
+    padding: 5px 10px;
+    border-radius: 12px;
+    border: 1px solid #eee;
+}
+
+.reference-box img {
+    height: 40px;
+    width: 40px;
+    object-fit: contain;
+    border-radius: 4px;
 }
 
 
